add match reports, update Auskick Coordinator

--- a/contact-us.html
+++ b/contact-us.html
@@ -22,7 +22,9 @@
 </ul>
 <h2>2024 GENERAL COMMITTEE MEMBERS</h2>
 <ul>
-  <li><span class="contact">Auskick Coordinator: </span><span class="nowrap">TBD</span></li>
+  <li>
+    <span class="contact">Auskick Coordinator: </span><span class="nowrap"><a href="auskick@bayswaterjfc.com.au" rel="nofollow">Riley McCraken</a></span>
+  </li>
   <li>
     <span class="contact">Child Safety Officer: </span><span class="nowrap">Wendy Gielen - <a href="tel:0414 747 608">0414 747 608</a></span>
   </li>
