--- a/teams-u09m-match-report.html
+++ b/teams-u09m-match-report.html
@@ -3,6 +3,7 @@
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
+    else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -72,6 +73,45 @@
     involvement. Thanks, Scott, for your dedication!
   </p>
   <p>Look forward to seeing everyone back on track this Friday.</p>
+</div>
+<div id="r04" style="display: none">
+  <h3>Round 4</h3>
+  <p>
+    This morning, our team gathered at Wally Tew Reserve for our Anzac Day match against Ferntree Gully. It was a privilege to come together as a team,
+    honouring the brave individuals who have served and sacrificed for our country.
+  </p>
+  <p>
+    With a deep sense of respect for the day's significance, our players competed with remarkable determination and sportsmanship against a strong Ferntree
+    Gully side. Despite the challenge, our team showcased their skill and class across both fields.
+  </p>
+  <p>
+    Under Andrew and Scott's guidance, our players put on dominant performance. Despite starting with a few players short on Dan's field, the contest was
+    fiercely fought, with Jett's timely arrival providing a much-needed boost to our defence.
+  </p>
+  <p>
+    Several players stood out with their exceptional efforts on the field. Logan demonstrated tremendous determination and effort throughout the match, while
+    Patrick and Max elevated their game as the match progressed. Billy and Randall formed a dynamic partnership, linking up effectively and showcasing strong
+    running throughout the game. Xavier was instrumental out of the centre and great to see Harvey having an impact moving the ball quickly by hands.
+  </p>
+  <p>
+    Both teams were given the privilege and responsibility to recognise players from the opposing side with Anzac Day Medals, for the players in the match
+    considered to best exemplify the Anzac spirit&mdash;skill, courage, self-sacrifice, teamwork and fair play.
+  </p>
+  <p>
+    Frankie's outstanding teamwork and relentless pressure earned him the Anzac Day Medal, a testament to his invaluable contributions to the team. Lennox's
+    display of bravery was also recognised by the Ferntree Gully coach with an Anzac Day Medal. Despite sustaining a nasty head knock while defending against
+    two opponents, Lennox exhibited resilience by returning to the field after taking a moment to recover. Her courage in defence and resilience were truly
+    inspiring.
+  </p>
+  <p>
+    We extend our heartfelt gratitude to all our team officials and parent helpers for their unwavering support and dedication. Today's match exemplified the
+    exceptional teamwork and camaraderie within our team.
+  </p>
+  <p>
+    As we reflect on today's game, we eagerly anticipate coming together tonight for our first round-up of the year. It presents a wonderful opportunity to
+    celebrate and acknowledge all our players for their efforts and improvements throughout the season so far.
+  </p>
+  <p>Go Baysie!</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
