--- a/teams-u11m-match-report.html
+++ b/teams-u11m-match-report.html
@@ -2,6 +2,7 @@
   jQuery(document).ready(function () {
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
+    else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -60,6 +61,29 @@
     It was great to sing the song as a team after the win, hopefully our newbies will get to know the words pretty quick when we get a few more wins on the
     board.
   </p>
+  <p>Go Baysie!</p>
+</div>
+<div id="r03" style="display: none">
+  <h3>Round 3</h3>
+  <p>
+    Our round 3 game had us playing away against Kilsyth, with them having a bye and a close loss to start the season we weren&rsquo;t really sure what we were
+    coming up against. We were a few numbers short this week so thank you to Kilsyth for lending us a player each quarter to make sure we could field a full
+    side and ensure as many kids could take the field as possible to enjoy the game.
+  </p>
+  <p>
+    Our captains this week were Levi T and Brodie who led the team out well and got us off to a great start. We controlled the game and led almost the whole way
+    but unfortunately were overrun in the last quarter with Kilsyth kicking 3 goals to our none. There were plenty of positives however, particularly putting
+    ourselves in a great position to win the game. Gordon and I had a chance to reflect after the game and realised there was an opportunity for us to try
+    things differently as coaches and we&rsquo;ll continue to learn and develop throughout the season alongside the team.
+  </p>
+  <p>
+    But overall we are very proud of the kids, particularly the manner in which they play the game, they really are a great bunch. They should all hold their
+    heads high knowing that we have been very competitive to start the season and I&rsquo;m sure as the season goes on other teams will see exactly what
+    we&rsquo;re capable of.
+  </p>
+  <p>A big thanks to Luke Baker for filling in as trainer, and James Holdstock for being our runner.</p>
+  <p>Thanks to our parent helpers on the day, Caleb, Jasper and Ved&rsquo;s families for helping to ensure our kids get to play and enjoy the game.</p>
+  <p>I&rsquo;m confident we&rsquo;ll get back on track with a win this week at our home ground.</p>
   <p>Go Baysie!</p>
 </div>
 <div id="not-found" style="display: none">
