--- a/teams-u14g-match-report.html
+++ b/teams-u14g-match-report.html
@@ -1,9 +1,54 @@
 <script type="text/javascript">
   jQuery(document).ready(function () {
-    if (window.location.search.includes('id=r02')) jQuery('#r02').show();
+    if (window.location.search.includes('id=r01')) jQuery('#r01').show();
+    else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else jQuery('#not-found').show();
   });
 </script>
+<div id="r01" style="display: none">
+  <h3>Round 1</h3>
+  <p>
+    This was a great day for local footy to kick off the season proper. A cold wet day with club colours on display, families and supporters cheering on the
+    different teams on the day.
+  </p>
+  <p>
+    Pre-game, we raised some concerns about the state of the ground with the area around the centre square in particularly bad shape. It was decided that this
+    area would be cordoned off and declared out of bounds. This was noted with the officials and reported to the league.
+  </p>
+  <p>
+    Kyra and Leah made their debut for us and were given a baptism of fire. These girls have quickly been accepted by the group and have assimilated into the
+    team. It is great to see our girls welcome and accept new players like they have.
+  </p>
+  <p>
+    Out on the field, with only nine players available for this round, (due to illness, injury and previous commitments as it was still school holidays,)
+    playing against a strong and full side, we were up against it. The players that were able to attend accepted the situation we were faced with and were not
+    intimidated at all by the enormous task before us. I am very proud of the fighting spirit this team showed.
+  </p>
+  <p>
+    Lexi, in ruck up against wave after wave of talls coming at her at every bounce did incredibly well and her efforts in the centre were commendable. Great
+    leadership effort from Lexi.
+  </p>
+  <p>
+    Raelene, Ella, Kyra and Leah, two of whom were making their debut for us did extremely well in defence again, faced with waves of attacks from Chirnside
+    Park.
+  </p>
+  <p>
+    We held our own in the one-on-one contests out in the middle, but with an opposition with a full bench and good use of their rotations, they were always
+    going to be the fresher side.
+  </p>
+  <p>
+    Raelene was singled out by Chirnside Park for her efforts in defence and awarded player of the round by them. We thank Chirnside Park for this gesture and
+    their acknowledgment of our efforts. Even they were impressed by our tenacity despite the odds!
+  </p>
+  <p>
+    This game was a real test of our mettle and the fact that the playing group has remained committed to the team is testament to their character. In only a
+    few short weeks as a team, I am blown away by how much these girls have come together as a group.
+  </p>
+  <p>
+    This was also a test for the coaching group as we begin our path in our new roles. With the help and support of those around us, we will work to bring out
+    the best in the playing group this season.
+  </p>
+</div>
 <div id="r02" style="display: none">
   <h3>Round 2</h3>
   <p>
