--- a/teams-u15b-match-report.html
+++ b/teams-u15b-match-report.html
@@ -2,6 +2,7 @@
   jQuery(document).ready(function () {
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
+    else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -33,6 +34,25 @@
     answers to win by one goal.&nbsp;
   </p>
   <p>I have so much faith in this team and believe if we continue to work hard at training we can beat anyone.&nbsp;</p>
+</div>
+<div id="r03" style="display: none">
+  <h3>Round 3</h3>
+  <p>
+    We came into this game full of confidence after going down by a kick last week. Prior to running out, we were able to reflect on Ryan who played his 50th
+    game for the club.&nbsp;
+  </p>
+  <p>
+    Come the first bounce, we were up and about, kicking away to up by a small margin at quarter time. During the second quarter we had the momentum however
+    couldn't kick away. The third quarter saw Lysterfield starting to take control of the game, running hard on the big ground. Whilst in the last quarter we
+    kicked a couple goals and got within a goal, unfortunately with 5 and &frac12; minutes to go, Tommy went down with what looked like to be a serious injury,
+    which ran the clock down. After he was able to get off the ground, we only had a minute to kick a goal to level the scores, but we were unable to do
+    so.&nbsp;
+  </p>
+  <p>
+    For the second week in a row, we came off the wrong side of the scoreboard to again go down by a goal. As a team, we are seeing some improvement each week
+    which is really exciting. I often forget that although we are Under 15s, half the team is Under 14s. As I always say, if we keep coming to training and put
+    in the hard yards, a win is just around the corner.
+  </p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
