--- a/teams-u16g-match-report.html
+++ b/teams-u16g-match-report.html
@@ -3,6 +3,7 @@
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
+    else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -58,6 +59,21 @@
   </p>
   <p>Goals. Haylee 2, Jade.</p>
   <p>Best. Haylee, Milly, Jade, Chloe, Gemma, Tiarnah, Keelie</p>
+</div>
+<div id="r04" style="display: none">
+  <h3>Round 4</h3>
+  <p>An absolutely awesome day to play footy and pay tribute to ANZAC Day.</p>
+  <p>Our warm up today was very ordinary so I was a little worried how the girls would start the day.</p>
+  <p>I gave them a bit of a razz up before the game hoping it would switch them on a bit more.</p>
+  <p>
+    Luckily we started the game quite well. Both teams came out working hard and applying lots of pressure. We were winning a bit more of the ball so we came in
+    at quarter time up on the scoreboard. We were able to keep playing at the same level for most of the game so there were times that Chirnside Park were in
+    control of the play but we were definitely in control of the play more often than Chirnside Park. Each quarter we were able to extend our lead to have a
+    really good win 69-32.
+  </p>
+  <p>They are still a few things we need to work on to improve but most of our game was really good.</p>
+  <p>Goals. Haylee 6, Shaylee 2, Chloe, Lara</p>
+  <p>Best. Haylee, Milly, Matilda, Chloe, Shaylee, Jade, Shae, Sanvi, Riann, Lara</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
