add match reports

--- a/teams-u11m-match-report.html
+++ b/teams-u11m-match-report.html
@@ -3,6 +3,7 @@
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
+    else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -84,6 +85,39 @@
   <p>A big thanks to Luke Baker for filling in as trainer, and James Holdstock for being our runner.</p>
   <p>Thanks to our parent helpers on the day, Caleb, Jasper and Ved&rsquo;s families for helping to ensure our kids get to play and enjoy the game.</p>
   <p>I&rsquo;m confident we&rsquo;ll get back on track with a win this week at our home ground.</p>
+  <p>Go Baysie!</p>
+</div>
+<div id="r04" style="display: none">
+  <h3>Round 4</h3>
+  <p>
+    Well done team, we had a great team game for round 4 against Beaconsfield. The team played in the spirit of the ANZACs as we saw great teamwork and hard
+    work ethic throughout the game. We wore black armbands to show our support to Jacob and Dan Robb following a loss in the family and look forward to
+    welcoming them back to the team when they are ready.
+  </p>
+  <p>
+    Our captains for the game were Emmalee and Pep who led the team well for this special round. Congratulations to Caleb on being awarded the ANZAC medal by
+    the Beaconsfield coach as the best and fairest player on the ground for our team.
+  </p>
+  <p>
+    Congratulations also to Aadhi for playing her first game for the club, and what a cracking game it was too. Aadhi provided some real zip and showed a really
+    strong attack on the contest to apply great pressure throughout the game, well done Aadhi.
+  </p>
+  <p>
+    Gordon and I were really pleased with how everyone worked as a team and continued to look for a better option ahead of the play, which led to taking shots
+    at goal from great positions on the field and kicking 8 goals straight for the game. We have seen the team as a whole improve so much already this season
+    and what we have been working on at training is starting to show through in the way we play as a team.&nbsp;
+  </p>
+  <p>
+    Thanks to Frankie for helping out and providing some additional bench depth, and a big thanks to Shaun for filling in as runner and Beccy for filling in as
+    trainer.
+  </p>
+  <p>
+    Thanks to our parent helpers on the day, Josh B, Anmar, Pep, Aadhi and Angus&rsquo;s families for helping to ensure our kids get to play and enjoy the game.
+  </p>
+  <p>
+    It was great to sing the song as a team after the win, let&rsquo;s keep working on playing well as a team and as the season goes on we&rsquo;ll be a real
+    threat to the competition.
+  </p>
   <p>Go Baysie!</p>
 </div>
 <div id="not-found" style="display: none">
