--- a/teams-u15b-match-report.html
+++ b/teams-u15b-match-report.html
@@ -3,6 +3,7 @@
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
+    else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -52,6 +53,28 @@
     For the second week in a row, we came off the wrong side of the scoreboard to again go down by a goal. As a team, we are seeing some improvement each week
     which is really exciting. I often forget that although we are Under 15s, half the team is Under 14s. As I always say, if we keep coming to training and put
     in the hard yards, a win is just around the corner.
+  </p>
+</div>
+<div id="r04" style="display: none">
+  <h3>Round 4</h3>
+  <p>
+    Round 4, being the last of the grading games saw us take on Wantirna South at Templeton Reserve. Being that it was the Anzac round, prior to the game we
+    discussed how significant it was to recognize those who have fallen before us and what mateship really means. After the Last Post and the Australian
+    National Anthem was played, the game got underway.&nbsp;
+  </p>
+  <p>
+    After we lost the toss, Wantirna South who kicked with the wind behind them, got off to a really fast start, kicking 5 goals to 1 by quarter time. The
+    second quarter saw us dig in deep, moving the ball well and playing excellent team football. By the main break we were able to reduce the margin to be
+    within two goals. At half time we made some tactical moves to try and stop Wantirna South from scoring as easy as they did in the first quarter. During the
+    third quarter the boys continued to play smart football, and with a relatively even quarter, restricted the opposition to scoring two goals. With the wind
+    behind us in the last quarter and plenty of fresh legs, the boys were ready to do whatever it took to get a win. After kicking a goal in the first 5
+    minutes, the Bayswater supporters were up and about, cheering loud from the side lines. Unfortunately after giving all we could, we again fell short by a
+    kick for the third week in a row.&nbsp;
+  </p>
+  <p>
+    Although we didn't get the win, we again got to see some great games by many of the players, including Owen and Zakiya, who in my opinion played their best
+    games for the club. A special mention also must go out to Harry who had a stand out game, kicking 5 goals and winning the Anzac Day medal for Bayswater.
+    &nbsp;&nbsp;
   </p>
 </div>
 <div id="not-found" style="display: none">
