--- a/teams-u11m.html
+++ b/teams-u11m.html
@@ -55,5 +55,6 @@
     <li><a href="/u11m-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
     <li><a href="/u11m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
     <li><a href="/u11m-match-report/?id=r03" rel="nofollow">Round 3 Match Report</a></li>
+    <li><a href="/u11m-match-report/?id=r04" rel="nofollow">Round 4 Match Report</a></li>
   </ul>
 </div>
