--- a/contact-us.html
+++ b/contact-us.html
@@ -2,28 +2,30 @@
 <ul>
   <li>
     <span class="contact">President: </span
-    ><span class="nowrap"><a href="president@bayswaterjfc.com.au" rel="nofollow">Beccy Dawber</a> - <a href="tel:0401 306 209">0401 306 209</a></span>
+    ><span class="nowrap"><a href="mailto:president@bayswaterjfc.com.au" rel="nofollow">Beccy Dawber</a> - <a href="tel:0401 306 209">0401 306 209</a></span>
   </li>
   <li>
-    <span class="contact">Vice President: </span><span class="nowrap"><a href="vicepresident@bayswaterjfc.com.au" rel="nofollow">Ben Beveridge</a></span>
+    <span class="contact">Vice President: </span><span class="nowrap"><a href="mailto:vicepresident@bayswaterjfc.com.au" rel="nofollow">Ben Beveridge</a></span>
   </li>
   <li>
     <span class="contact">Secretary: </span
-    ><span class="nowrap"><a href="secretary@bayswaterjfc.com.au" rel="nofollow">Wendy Gielen</a> - <a href="tel:0414 747 608">0414 747 608</a></span>
+    ><span class="nowrap"><a href="mailto:secretary@bayswaterjfc.com.au" rel="nofollow">Wendy Gielen</a> - <a href="tel:0414 747 608">0414 747 608</a></span>
   </li>
   <li>
     <span class="contact">Treasurer: </span
-    ><span class="nowrap"><a href="treasurer@bayswaterjfc.com.au" rel="nofollow">Nicky Maxwell</a> - <a href="tel:0421 995 434">0421 995 434</a></span>
+    ><span class="nowrap"><a href="mailto:treasurer@bayswaterjfc.com.au" rel="nofollow">Nicky Maxwell</a> - <a href="tel:0421 995 434">0421 995 434</a></span>
   </li>
   <li>
     <span class="contact">Registrar: </span
-    ><span class="nowrap"><a href="registrar@bayswaterjfc.com.au" rel="nofollow">Amanda Beveridge</a> - <a href="tel:0403 833 868">0403 833 868</a></span>
+    ><span class="nowrap"
+      ><a href="mailto:registrar@bayswaterjfc.com.au" rel="nofollow">Amanda Beveridge</a> - <a href="tel:0403 833 868">0403 833 868</a></span
+    >
   </li>
 </ul>
 <h2>2024 GENERAL COMMITTEE MEMBERS</h2>
 <ul>
   <li>
-    <span class="contact">Auskick Coordinator: </span><span class="nowrap"><a href="auskick@bayswaterjfc.com.au" rel="nofollow">Riley McCraken</a></span>
+    <span class="contact">Auskick Coordinator: </span><span class="nowrap"><a href="mailto:auskick@bayswaterjfc.com.au" rel="nofollow">Riley McCraken</a></span>
   </li>
   <li>
     <span class="contact">Child Safety Officer: </span><span class="nowrap">Wendy Gielen - <a href="tel:0414 747 608">0414 747 608</a></span>
