--- a/teams-u13b-match-report.html
+++ b/teams-u13b-match-report.html
@@ -1,6 +1,8 @@
 <script type="text/javascript">
   jQuery(document).ready(function () {
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
+    else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
+    else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -35,6 +37,57 @@
     improvement over the coming weeks as they boys get back into the flow of the season. This improvement is critical as harder games come our way.
   </p>
   <p>Go Baysie.</p>
+</div>
+<div id="r02" style="display: none">
+  <h3>Round 2</h3>
+  <p>A well fought out win by the boys today, in a tough 4 quarter tussle against a solid opponent.&nbsp;</p>
+  <p>
+    Today we rotated our midfield given the size of the ground. This gave an opportunity to Seth, Phoenix, Cooper Leach, Marley, Dusty and Cooper Lancaster all
+    spending time on the ball.
+  </p>
+  <p>We also rotated our ruck, giving Lachie, Hamish and Kirby time in this spot.</p>
+  <p>A real standout game today by Cooper Lancaster, who looked at ease playing through the midfield. This was definitely his most complete game so far.</p>
+  <p>
+    Our backline also had its busiest day for some time, and they all stood strong resisting many attacks. Dusty played well taking several intercept marks,
+    with Lachie and Kirby being extremely solid across half back. Charles, playing in just his second game, used his body positioning with great skill.
+  </p>
+  <p>
+    We spoke with boys today about overusing the ball as we looked much better when kicking long. This overuse cost us dearly at times and could've had a
+    significant impact on the end result.
+  </p>
+  <p>
+    Overall a good result against, but as I said last week, every game will be challenging and the boys will need to be near their best each week if we're to
+    remain competitive.
+  </p>
+  <p>We are looking forward to the boys continuing to improve every week.</p>
+</div>
+<div id="r03" style="display: none">
+  <h3>Round 3</h3>
+  <p>
+    Our winning streak has come to an end. 18 home and away wins in a row is an outstanding effort from this team and we should all be very proud of this
+    sustained success.
+  </p>
+  <p>
+    We were competitive all day yesterday and remained in the game until the final few minutes. Our conversion on goal was one of the key factors in the result.
+    Kicking 9 points in a row hurt. You also get those days where the ball bounces the wrong way, you run under the ball or a kick lands just short or you
+    narrowly miss a goal. Yesterday was that day.
+  </p>
+  <p>
+    Our conversations at the breaks really focused on the lack of hard ball gets, being accountable to each other, talk on the field and quick ball movement.
+    These are the next steps the team need to take to become a better unit.
+  </p>
+  <p>Saying this, there were positives yesterday, there were some great passages of play. The drive from our back was exceptional.</p>
+  <p>
+    One of stand out plays was an Dusty attacking the ball from full back, kicking to Phoenix on the wing, he then followed up his kick taking the handball from
+    Phoenix going for a run and kicking it to our advantage in the forward line, just narrowly missing a goal. This is a key example of all of the things we've
+    been talking about and we hope that this type of play inspires others in the team to do the same.
+  </p>
+  <p>Yesterday we did throw some of the magnets around playing some of the boys out of position, we want the boys to be comfortable in multiple positions.</p>
+  <p>
+    What we are impressed with is the development of new players, such as Nolan, Xane and Charles. We know these boys need game time to improve but we can see
+    glimpses already.
+  </p>
+  <p>This week's game will be another tough one and communication and hard ball gets will be the focus of this week's training.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
