--- a/teams-u14g-match-report.html
+++ b/teams-u14g-match-report.html
@@ -2,6 +2,8 @@
   jQuery(document).ready(function () {
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
+    else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
+    else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -87,6 +89,44 @@
     Overall, our team had some great passages of play, laying some great tackles and effective disposals, and showing some great vision. Again, we are still
     coming together as a team, coaches included, and we have had two difficult games that would have tested the mettle of any team. I have every confidence that
     we can all grow together as a team and success is not far off.
+  </p>
+</div>
+<div id="r03" style="display: none">
+  <h3>Round 3</h3>
+  <p>This round was a BYE</p>
+</div>
+<div id="r04" style="display: none">
+  <h3>Round 4</h3>
+  <p>Pre-game, both teams lined up in silence, and bowed our heads as a sign of respect to our troops who have served and continue to serve our country.</p>
+  <p>
+    The game itself was fitting of the occasion, with both teams playing very well, and pushing each other for the whole four quarters. It was a true
+    arm-wrestle of a match.
+  </p>
+  <p>We matched their intensity in all aspects of the game. We kept our formation and were in most of the contests for the majority of the game.</p>
+  <p>Our back line of Raelene, Ella, Leah and Kyra kept their formation well and kept the opposition&rsquo;s scoring to a minimum.</p>
+  <p>
+    Up front Fenix and Clara were instrumental in getting the ball from the centre to Jess deep in attack and we showed that we can score goals and move the
+    ball forward. We scored more in the first quarter of this game than the two previous matches combined.
+  </p>
+  <p>
+    Our centre trio of Lexie, Lily, and Gemma held the middle well, with support out wide by Shayla, Pippa, Gypsie and Ruby, who took the ball away from the
+    centre and pushed forward.
+  </p>
+  <p>
+    Lexie took a nasty knock and had to come off for a spell. Ava, who had been chomping at the bit to get involved, got her chance. Despite advising her to
+    stay away from direct contests, she quickly found herself in the thick of it. Ella also took a knock to the ankle and came off for a spell to reset.
+  </p>
+  <p>
+    With the inability to rest and rotate players, and still being a reasonably new outfit, we lost our formation as fatigue set in and gave away a few
+    uncontested possessions at crucial times.
+  </p>
+  <p>
+    All in all, we showed that we are a team that has a lot to offer and have the arsenal to be competitive this season. We can score goals, defend well, and
+    get the ball out of the centre.
+  </p>
+  <p>
+    I am very proud of the effort the girls have put in and feel confident that we can only improve from here. We will continue to work on our skills, match
+    tactics and getting to know each other. Most importantly we will work on enjoying our footy and being part of a team.
   </p>
 </div>
 <div id="not-found" style="display: none">
