--- a/teams-u17.5b-match-report.html
+++ b/teams-u17.5b-match-report.html
@@ -1,6 +1,7 @@
 <script type="text/javascript">
   jQuery(document).ready(function () {
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
+    else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -15,6 +16,10 @@
     and with a great celebration. Backline was solid lead by Huddo and the midfield was great we have got so much improvement still to come.&nbsp;
   </p>
   <p>Well done team!</p>
+</div>
+<div id="r02" style="display: none">
+  <h3>Round 2</h3>
+  <p>The round was a BYE</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
