update auskick name

--- a/contact-us.html
+++ b/contact-us.html
@@ -25,7 +25,7 @@
 <h2>2024 GENERAL COMMITTEE MEMBERS</h2>
 <ul>
   <li>
-    <span class="contact">Auskick Coordinator: </span><span class="nowrap"><a href="mailto:auskick@bayswaterjfc.com.au" rel="nofollow">Riley McCraken</a></span>
+    <span class="contact">Auskick Coordinator: </span><span class="nowrap"><a href="mailto:auskick@bayswaterjfc.com.au" rel="nofollow">Hannah Watkins</a></span>
   </li>
   <li>
     <span class="contact">Child Safety Officer: </span><span class="nowrap">Wendy Gielen - <a href="tel:0414 747 608">0414 747 608</a></span>
